--- a/_posts/2007-11-13-android-una-nuova-tecnologia-targata-google.html
+++ b/_posts/2007-11-13-android-una-nuova-tecnologia-targata-google.html
@@ -20,7 +20,8 @@ author:
   last_name: Scatoloni
 ---
 <p> Dopo tanto parlare dell'imminente uscita di un telefonino targato Google, il gigante del Web ha mostrato al mondo la sua "mossa" sul fronte telefonia, niente hardware per ora, ma solo una nuova tecnologia software chiamata <a href="http://code.google.com/android/index.html">Android</a>. Questa tecnologia sarà comune a molti produttori sarà infatti un vero e proprio sistema aperto che porterà almeno si spera, una boccata fresca nel mondo della telefonia e permetterà di sviluppare applicazioni molto interessanti. La BigG ha già rilasciato un'<a href="http://code.google.com/android/download.html">sdk </a>per lo sviluppo e ci mostra questa nuova tecnologia in un video dimostrativo.</p>
-{% youtube 6rYozIZOgDk %}
+{% include youtubePlayer.html id=page.6rYozIZOgDk %}
+
 <p>Spero di riuscire di trovare del tempo per mettere le mani su questa nuova tecnologia e di postare il prima possibile del codice a riguardo :-)</p>
 <p>Come sempre:<br />
 Stay Tuned!!!!</p>
