--- a/_posts/2008-08-27-helpdesk-medievale.html
+++ b/_posts/2008-08-27-helpdesk-medievale.html
@@ -20,5 +20,6 @@ author:
   last_name: ''
 ---
 <p>Davvero simpatico questo video su youtube :-D !!!!</p>
-{% youtube Rm9SkbhPfE4 %}
+{% include youtubePlayer.html id=page.Rm9SkbhPfE4 %}
+
 <p>Helpdesk medievale (Medieval helpdesk, Italian subtitles)</p>
