--- a/_posts/2008-09-21-im-a-pc.html
+++ b/_posts/2008-09-21-im-a-pc.html
@@ -22,8 +22,10 @@ author:
 ---
 <p>Anche Microsoft punta sugli spot come Apple con la famosa serie <a href="http://www.apple.com/it/getamac/">getaMac</a> e subito arriva il video parodia eccoli: l'originale e la parodia.</p>
 
-{% youtube HrmF-mPLybw %}
 
-{% youtube 7Q2aulxK0hE %}
+{% include youtubePlayer.html id=page.HrmF-mPLybw %}
+
+{% include youtubePlayer.html id=page.7Q2aulxK0hE %}
+
 
 <p>Davvero migliore il secondo, non c'è storia :-D .</p>
