--- a/_posts/2009-04-19-la-grande-opera.html
+++ b/_posts/2009-04-19-la-grande-opera.html
@@ -20,6 +20,7 @@ author:
   last_name: ''
 ---
 
-{% youtube uRofMkUgzfo %}
+{% include youtubePlayer.html id=page.uRofMkUgzfo %}
+
 <p>Caparezza La Grande Opera</p>
 <p class="technorati-tags"><a href="http://technorati.com/tag/Musica" rel="tag">Musica</a>, <a href="http://technorati.com/tag/Caparezza" rel="tag">Caparezza</a></p>
