--- a/_posts/2011-11-12-il-futuro-del-lavoro.html
+++ b/_posts/2011-11-12-il-futuro-del-lavoro.html
@@ -25,4 +25,7 @@ author:
 ---
 <p>Interessante video che mostra uno spaccato, di come potrebbe essere il lavoro domani, un domani a parer mio sempre più vicino.</p>
 <p>Buona visione.</p>
-<p>{% youtube G8Yt4wxSblc %}</p>
+<p>
+	{% include youtubePlayer.html id=page.G8Yt4wxSblc %}
+	
+</p>
