--- a/_posts/2007-12-11-psphone-in-arrivo.html
+++ b/_posts/2007-12-11-psphone-in-arrivo.html
@@ -22,5 +22,6 @@ author:
 <p>Voci ufficiose in diversi siti del panorama tecnologico, danno per imminente l'uscita del fantomatico PSPhone, la fusione tra la piattaforma ludica portatile <a href="http://it.playstation.com/psp/">Sony PSP</a> ed un cellulare della linea <a href="http://www.sonyericsson.com/">Sony Ericsson</a>. Si parla di una tecnologia a doppio slider che ne permetterebbe l'uso in due modalità differenti, una dedicata al gioco con tutti i controlli soliti delle console playstation, l'altra come quella di un tipico cellulare slide phone.</p>
 <p>Non si sa se avverrà veramente un annuncio da parte di Sony, attendiamo comunque (prima o poi) l'arrivo di questo terminale.</p>
 <p>Nell'attesa un bel video del prodotto :-)</p>
-{% youtube kf1Z3vJPKPc %}
+{% include youtubePlayer.html id=page.kf1Z3vJPKPc %}
+
 <p>Fonte: <a href="http://www.hwupgrade.it/news/telefonia/praticamente-ufficiale-il-psphone_23578.html">Hardware Upgrade</a></p>
