--- a/_posts/2007-07-14-blueme-nav.html
+++ b/_posts/2007-07-14-blueme-nav.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 comments: true
-title: Blue&Me Nav
+title: BlueAndMe Nav
 date: 2007-07-14 13:41:51.000000000 +02:00
 categories:
 - Blog
