--- a/_posts/2008-04-14-tuxstyle-ti-regala-un-ipod-touch-contest-1.html
+++ b/_posts/2008-04-14-tuxstyle-ti-regala-un-ipod-touch-contest-1.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 comments: true
-title: tuXstyle ti regala un iPod Touch !!! | Contest 1
+title: tuXstyle ti regala un iPod Touch
 date: 2008-04-14 15:17:06.000000000 +02:00
 categories:
 - Blog
