--- a/_posts/2014-10-04-corso-android.html
+++ b/_posts/2014-10-04-corso-android.html
@@ -22,6 +22,7 @@ author:
 ---
 <p><img title="NewImage.png" src="{{site.baseurl}}/assets/NewImage.png" alt="NewImage" width="240" height="135" border="0" /></p>
 <p>La <strong>carriera lavorativa</strong> nel mondo moderno è sempre più difficile, specialmente per noi generazione dei <a href="http://en.wikipedia.org/wiki/Millennials">Millenials</a>, che dobbiamo sempre reinventarci, per essere sempre <strong>impiegabili</strong>, in un mondo che cambia troppo rapidamente.</p>
+<!--more-->
 <p>Venendo al nocciolo della questione, era molto tempo che pensavo di dare una spolverata alle mie conoscenze tecniche, che come si legge dal mio sito sono principalmente in tecnologia <strong>Java</strong>/<strong>Javascript</strong>.</p>
 <p>Ho deciso quindi di dedicare il mio poco :-(  tempo libero alla frequentazione di un corso sulla piattaforma <a href="https://www.coursera.org">Coursera</a>, che offre interessanti corsi gratuiti in collaborazione con <a href="https://www.coursera.org/umd">Università</a> di tutto il mondo. Il corso che sto seguendo, è relativo alla <a href="https://www.coursera.org/course/android">programmazione mobile su piattaforma Android</a>.</p>
 <p>Ho cominciato da poco  più una settimana, ma posso già dire che la piattaforma è ottima ed il mio interesse sull’argomento è alle stelle.</p>
