--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ title: Home
       {% else %}
        {{post.content}}
      {% endif %}
+     <div class="breaker"></div>
   </article>
   {% endfor %}
 </div>
